Completed boilerplate of recipe page.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Zach's Recipes</h1>
         <p>My favorite food ever: <a href="./recipes/pizza.html">pizza!</a> </p>
+        <p>My favorite dessert ever: <a href=""></a> </p>
     </body>
 </html>
