completed 2nd recipe page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Zach's Recipes</title>
     </head>
     <body>
         <h1>Zach's Recipes</h1>
         <p>My favorite food ever: <a href="./recipes/pizza.html">pizza!</a> </p>
-        <p>My favorite dessert ever: <a href=""></a> </p>
+        <p>My favorite dessert: <a href="">key lime pie.</a> </p>
     </body>
 </html>
