--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <title>Zach's Recipes</title>
     </head>
     <body>
-        <h1>Zach's Recipes</h1>
+        <h1>Zach's Favorite Recipes</h1>
         <p>My favorite food ever: <a href="./recipes/pizza.html">pizza!</a> </p>
-        <p>My favorite dessert: <a href="">key lime pie.</a> </p>
+        <p>My favorite dessert: <a href="./recipes/keylimepie.html">key lime pie!</a> </p>
+        <p>My favorite drink recipe: <a href="./recipes/matchafrappe.html">matcha frappe!</a> </p>
     </body>
 </html>
