added return to homepage adjusted picture sizes

--- a/recipes/keylimepie.html
+++ b/recipes/keylimepie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Key Lime Pie</h1>
-    <img src="../img/keylimepie.jpg" alt="A key lime pie with limes and whipped cream garnish">
+    <img src="../img/keylimepie.jpg" alt="A key lime pie with limes and whipped cream garnish" width="400">
     <h3>Just like pizza this key lime pie can cure any sadness to come your way!</h3>
     <h4>Ingredients</h4>
     <ul>
@@ -23,5 +23,6 @@
         <li>Combine sweetened condensed milk, key lime juice, and egg yolks in a large bowl; mix well. Pour into unbaked graham cracker crust.</li>
         <li>Bake in the preheated oven until filling is set, about 15 minutes. Allow to cool completely before slicing.</li>
     </ol>
+        <p><a href="../index.html">Return to homepage!</a></p>
 </body>
 </html>
