--- a/recipes/matchafrappe.html
+++ b/recipes/matchafrappe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Matcha Frappe</h1>
-    <img src="../img/matcha.jpg" alt="a green tinted beverage with whipped cream garnish.">
+    <img src="../img/matcha.jpg" alt="a green tinted beverage with whipped cream garnish." width="400">
     <h3>Since im from Texas this beverage is great to cool off with in the summer.</h3>
     <h4>Ingredients</h4>
     <ul>
@@ -22,5 +22,6 @@
     <ol>
         <li>Combine milk, matcha green tea powder, ice, and vanilla syrup, respectively in a blender; blend to desired consistency. Serve with whipped cream on top.</li>
     </ol>
+    <p><a href="../index.html">Return to homepage!</a></p>
 </body>
 </html>
